--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "verify-tests": "node scripts/test.js --env=jsdom --coverage"    
+    "verify-tests": "node scripts/test.js --env=jsdom --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -70,6 +70,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "jest": "^23.6.0",
     "prop-types": "^15.7.2"
   },
